# tgtrader

./: .gitignore  .windsurfrules  LICENSE  MANIFEST.in  README.md  akshare_data.db  common.db  pyproject.toml  setup.py
data/: streamlit_data.db
tgtrader/: __init__.py  app.py  common.py  data.py  strategy.py  strategy_config.py
tgtrader/bt/: algos.py  backtest.py
tgtrader/dao/: common.py  t_api_key.py  t_flow.py  t_flow_node.py  t_llm_template.py  t_news_datasource.py  t_rss_source.py  t_sql_history_model.py  t_task.py  t_user.py  t_user_strategy.py  t_user_table_meta.py
tgtrader/data_provider/: data_provider_akshare.py  data_provider_duckdb.py  index_data_query.py
tgtrader/data_provider/dao/: akshare_common.py  common.py  t_kdata.py  t_meta.py
tgtrader/data_provider/dao/akshare/: common.py  t_etf_kdata.py  t_kdata.py  t_meta.py
tgtrader/data_provider/dao/models/: common.py  t_etf_kdata_model.py  t_kdata_model.py  t_llm_template.py  t_meta_model.py  t_sql_history_model.py  t_user_table_meta.py
tgtrader/data_provider/service/: akshare_data_service.py  data_service.py
tgtrader/flow/: base.py  flow.py
tgtrader/flow/nodes/: processor_llm.py  processor_python  processor_python.py  processor_sql.py  sink_db.py  source_db.py  source_rss.py
tgtrader/gateway/futu/: common.py  defs.py  futu_option_gateway.py  futu_stock_gateway.py  futu_trade_gateway.py
tgtrader/knowledge_base/: duckdb_pandas_compare.ipynb
tgtrader/service/: account_service.py  data_init_service.py  flow_config_service.py  symbol_service.py  user_strategy.py
tgtrader/strategies/bt/: risk_parity_strategy.py  strategy_bt.py  target_weight_strategy.py  weight_equal_strategy.py
tgtrader/strategy/: strategy_base.py
tgtrader/strategy/strategies/bt/: strategy_bt.py  weight_equal_strategy.py
tgtrader/streamlit_pages/: init_data.py  login.py  main.py
tgtrader/streamlit_pages/dao/: common.py  t_api_key.py  t_flow.py  t_flow_node.py  t_flow_node_cfg.py  t_llm_template.py  t_rss_source.py  t_sql_history_model.py  t_user.py  t_user_flow.py  t_user_strategy.py  t_user_table_meta.py
tgtrader/streamlit_pages/pages/: welcome.py
tgtrader/streamlit_pages/pages/accounts/: data_init.py  (+2 more)
tgtrader/streamlit_pages/service/: account_service.py  flow_config_service.py  user_strategy.py
tgtrader/streamlit_pages/utils/: cluster_calc.py  common.py  corr_calc.py
tgtrader/tasks/: task_scheduler.py
tgtrader/tests/: test_weight_equal_strategy.py
tgtrader/utils/: db_path_utils.py  db_wrapper.py  defs.py  duckdb_handler.py  duckdb_peewee.py  duckdb_query.py  duckdb_query_df.py  llm_utils.py  model_inspector.py
(+28 files in other folders)
