[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgtrader"
version = "1.3.2"
description = "TianGong Quantitative Investment Research Analysis Client"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MPL-2.0" }

authors = [
    { name = "smartian", email = "smartian@163.com" }
]
maintainers = [
    { name = "smartian", email = "smartian@163.com" }
]
keywords = ["quantitative", "trading", "investment", "analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas==1.5.3",
    "numpy==1.26.4",
    "matplotlib==3.5.3",
    "ffn==1.1.1",
    "loguru==0.7.3",
    "akshare==1.16.9",
    "tqdm==4.67.1",
    "cython==3.0.11",
    "pyprind==2.11.3",
    "streamlit==1.41.1",
    "peewee==3.17.8",
    "bcrypt==4.2.1",
    "pydantic==2.10.4",
    "streamlit-aggrid==1.0.5",
    "duckdb==1.1.3",
    "arrow==1.3.0",
    "more-itertools==10.5.0",
    "plotly==5.24.1",
    "nbconvert==7.16.5",
    "streamlit-flow-component==1.5.0",
    "streamlit-ace==0.1.1",
    "streamlit-shadcn-ui==0.1.18",
    "cryptography==44.0.0",
    "feedparser==6.0.11",
    "openai==1.60.0",
    "apscheduler==3.11.0",
    "futu-api",
    "statsmodels==0.14.4",
]

[project.urls]
Homepage = "https://github.com/smartian1/tgtrader"

[tool.setuptools]
package-data = { "tgtrader" = ["images/*"] }
